--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>oops</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   <h1>your not supposed to be here, Press one of these buttons below to get to the right place.</h1>
-      <center><a href="/camellia/index.html"><button class="buttonpink button4">Camellia Mod for FNF</button></a></center>
+<a href="/camellia/"><input type="image" name="camellia" src="/image.png"alt="Camellia FNF Mod"></a>
      <center><a href="/fnf-soft/index.html"><button class="buttongreen button4">FNF Soft Mod</button></a></center>
 </head>
 <body>
