--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   <h1>your not supposed to be here, Press one of these buttons below to get to the right place.</h1>
 <center><a href="/camellia/"><input type="image" name="camellia" src="/image.png"alt="Camellia FNF Mod"></a></center>
-     <center><a href="/fnf-soft/index.html"><button class="buttongreen button4">FNF Soft Mod</button></a></center>
+<center><a href="/sonic-exe/"><input type="image" name="sonic-exe" src="/image2.png"alt="Sonix.exe FNF Mod"></a></center>
 </head>
 <body>
   
