--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>oops</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   <h1>your not supposed to be here, Press one of these buttons below to get to the right place.</h1>
-<center><a href="/camellia/"><input type="image" name="camellia" src="/image.png"alt="Camellia FNF Mod"></a></center>
-<center><a href="/sonic-exe/"><input type="image" name="sonic-exe" src="/image2.png"alt="Sonic.exe FNF Mod"></a></center>
-<center><a href="/slenderman/"><input type="image" name="Slenderman" src="/image3.png"alt="Slenderman FNF Mod"></a></center>
+<a href="/camellia/"><input type="image" name="camellia" src="/image.png"alt="Camellia FNF Mod"></a>
+<a href="/sonic-exe/"><input type="image" name="sonic-exe" src="/image2.png"alt="Sonic.exe FNF Mod"></a>
+<a href="/slenderman/"><input type="image" name="Slenderman" src="/image3.png"alt="Slenderman FNF Mod"></a>
 </head>
 <body>
   
