--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a href="/sonic-exe/"><input type="image" name="sonic-exe" src="/image2.png"alt="Sonic.exe FNF Mod"></a>
 <a href="/slenderman/"><input type="image" name="Slenderman" src="/image3.png"alt="Slenderman FNF Mod"></a>
 <a href="/impostor-v3/"><input type="image" name="ImposterV3" src="/image4.png"alt="Impostor V3 Mod"></a>
+<a href="/agoti/"><input type="image" name="Agoti" src="/image5.png"alt="Agoti Mod"></a>
 </head>
 <body>
   
