--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="/slenderman/"><input type="image" name="Slenderman" src="/image3.png"alt="Slenderman FNF Mod"></a>
 <a href="/impostor-v3/"><input type="image" name="ImposterV3" src="/image4.png"alt="Impostor V3 Mod"></a>
 <a href="/agoti/"><input type="image" name="Agoti" src="/image5.png"alt="Agoti Mod"></a>
-<a href="/shaggy/"><input type="image" name="Shaggy" src="/image6.png"alt="Shaggy Mod"></a>
+<a href="/fnf/"><input type="image" name="fnf" src="/image6.png"alt="FNF Week 1-7"></a>
 </head>
 <body>
   
